tests/aster/x/mochi/rosetta/display-an-outline-as-a-nested-table.error
error[A028]: return type mismatch: expected string, got any
  --> /workspace/mochi/tests/rosetta/x/Mochi/display-an-outline-as-a-nested-table.mochi:36:3

 36 |   return s[i:len(s)]
    |   ^

help:
  Ensure return value matches
